syntax="proto2";


message HeartBeat{
	required int32 term = 1; 	 
	required int32 leaderId = 2;
	required int64 timeStampOnLatestUpdate = 3;
}

message HeartBeatPacket{
	required int64 unixTimestamp  = 1;
	HeartBeat heartbeat = 2;

}

























